include $(srcdir)/validate-recursive.inc

SUBDIRS = Dynamics Optimization Response Restart SinglePoint NEB

# Install the validation suite scripts.
noinst_SCRIPTS = runTests.py parseTestResults.py
EXTRA_DIST = runTests.py parseTestResults.py

#sysconf_DATA = example.test example.reference

#EXTRA_DIST = $(bin_SCRIPTS) $(sysconf_DATA)
