include $(top_srcdir)/make.inc

SUBDIRS = MD MD-restart

EXTRA_DIST = \
  AcO-.inp \
  AcO-.ref \
  Adenine-NumFreq.frequencies \
  Adenine-NumFreq.out \
  Adenine-Optimize.out \
  Adenine-Optimize.xyz \
  Adenine.inp \
  Al.inp \
  Al.ref \
  BetaCarotene.inp \
  BetaCarotene.ref \
  Biotin.inp \
  Biotin.ref \
  BoronNitride.inp \
  BoronNitride.ref \
  CH2x-6.inp \
  CH2x-6.out \
  CH2x-6.ref \
  CH2x-6.xyz \
  Caffiene.inp \
  Caffiene.ref \
  Chlorophyll.inp \
  Chlorophyll.ref \
  Cytosine-NumFreq.frequencies \
  Cytosine-NumFreq.out \
  Cytosine-Optimize.out \
  Cytosine-Optimize.xyz \
  Cytosine.inp \
  Diamond.inp \
  Diamond.ref \
  Graphite.inp \
  Graphite.ref \
  Guanine-NumFreq.frequencies \
  Guanine-NumFreq.out \
  Guanine-Optimize.out \
  Guanine-Optimize.xyz \
  Guanine.inp \
  H2O.inp \
  H2O.ref \
  HeH+.inp \
  HeH+-force.inp \
  Histidine.inp \
  Histidine.ref \
  HybridMC_H2O.inp \
  IceIh.inp \
  IceIh.ref \
  Malonaldahyde.inp \
  NH3.inp \
  NH3.ref \
  NO+.inp \
  NO+.ref \
  O2.inp \
  O2.ref \
  PIce.inp \
  PIce.ref \
  Peroxide.inp \
  Peroxide.ref \
  Quartz.inp \
  Quartz.ref \
  Steam.inp \
  Steam.ref \
  TEMPO.inp \
  TEMPO.ref \
  Tetrodotoxin.inp \
  Vancomycin.inp \
  Vancomycin.ref \
  WaterHexamer.inp \
  WaterHexamer.ref
