include ../../make.inc

noinst_LIBRARIES = libMondoHDF5.a

libMondoHDF5_a_SOURCES = \
  H5.c \
  H5A.c \
  H5AC.c \
  H5ACprivate.h \
  H5ACpublic.h \
  H5Apkg.h \
  H5Aprivate.h \
  H5Apublic.h \
  H5B.c \
  H5Bprivate.h \
  H5Bpublic.h \
  H5D.c \
  H5Dprivate.h \
  H5Dpublic.h \
  H5E.c \
  H5Eprivate.h \
  H5Epublic.h \
  H5F.c \
  H5FD.c \
  H5FDcore.c \
  H5FDcore.h \
  H5FDfamily.c \
  H5FDfamily.h \
  H5FDgass.c \
  H5FDgass.h \
  H5FDlog.c \
  H5FDlog.h \
  H5FDmpio.c \
  H5FDmpio.h \
  H5FDmpiposix.c \
  H5FDmpiposix.h \
  H5FDmulti.c \
  H5FDmulti.h \
  H5FDprivate.h \
  H5FDpublic.h \
  H5FDsec2.c \
  H5FDsec2.h \
  H5FDsrb.c \
  H5FDsrb.h \
  H5FDstdio.c \
  H5FDstdio.h \
  H5FDstream.c \
  H5FDstream.h \
  H5FL.c \
  H5FLprivate.h \
  H5Farray.c \
  H5Fcontig.c \
  H5Fistore.c \
  H5Fpkg.h \
  H5Fprivate.h \
  H5Fpublic.h \
  H5Fseq.c \
  H5G.c \
  H5Gent.c \
  H5Gnode.c \
  H5Gpkg.h \
  H5Gprivate.h \
  H5Gpublic.h \
  H5Gstab.c \
  H5HG.c \
  H5HGprivate.h \
  H5HGpublic.h \
  H5HL.c \
  H5HLprivate.h \
  H5HLpublic.h \
  H5I.c \
  H5Iprivate.h \
  H5Ipublic.h \
  H5MF.c \
  H5MFprivate.h \
  H5MM.c \
  H5MMprivate.h \
  H5MMpublic.h \
  H5O.c \
  H5Oattr.c \
  H5Obogus.c \
  H5Ocomp.c \
  H5Ocont.c \
  H5Odtype.c \
  H5Oefl.c \
  H5Ofill.c \
  H5Olayout.c \
  H5Omtime.c \
  H5Oname.c \
  H5Onull.c \
  H5Oprivate.h \
  H5Opublic.h \
  H5Osdspace.c \
  H5Oshared.c \
  H5Ostab.c \
  H5P.c \
  H5Pdcpl.c \
  H5Pdxpl.c \
  H5Pfapl.c \
  H5Pfcpl.c \
  H5Pprivate.h \
  H5Ppublic.h \
  H5R.c \
  H5Rprivate.h \
  H5Rpublic.h \
  H5S.c \
  H5Sall.c \
  H5Shyper.c \
  H5Smpio.c \
  H5Snone.c \
  H5Spkg.h \
  H5Spoint.c \
  H5Sprivate.h \
  H5Spublic.h \
  H5Sselect.c \
  H5T.c \
  H5TB.c \
  H5TBprivate.h \
  H5TS.c \
  H5TSprivate.h \
  H5Tbit.c \
  H5Tconv.c \
  H5Tinit.c \
  H5Tpkg.h \
  H5Tprivate.h \
  H5Tpublic.h \
  H5Tvlen.c \
  H5V.c \
  H5Vprivate.h \
  H5Z.c \
  H5Zdeflate.c \
  H5Zprivate.h \
  H5Zpublic.h \
  H5api_adpt.h \
  H5private.h \
  H5public.h \
  Makefile.am \
  hdf5.h

EXTRADIST = COPYING

AM_CPPFLAGS += @HDF5_CPPFLAGS@
