SUBDIRS = src

EXTRA_DIST = README.txt

# Set some variables.
CPPFLAGS = @CPPFLAGS@ @H5_CPPFLAGS@
CXXFLAGS = @CXXFLAGS@ @H5_CXXFLAGS@
FCFLAGS = @FCFLAGS@ @H5_FCFLAGS@
CFLAGS = @CFLAGS@ @H5_CFLAGS@
H5_CFLAGS = @H5_CFLAGS@
H5_CPPFLAGS = @H5_CPPFLAGS@
H5_CXXFLAGS = @H5_CXXFLAGS@
H5_FCFLAGS = @H5_FCFLAGS@
H5_LONE_COLON = @H5_LONE_COLON@
H5_VERSION = @H5_VERSION@
