noinst_LIBRARIES = libQCTC.a

libQCTC_a_SOURCES = \
  AuxInt10.f90 \
  AuxInt11.f90 \
  AuxInt12.f90 \
  AuxInt13.f90 \
  AuxInt7.f90 \
  AuxInt8.f90 \
  AuxInt9.f90 \
  CTraX107.f90 \
  CTraX206.f90 \
  CTraX207.f90 \
  CTraX305.f90 \
  CTraX306.f90 \
  CTraX307.f90 \
  CTraX404.f90 \
  CTraX405.f90 \
  CTraX406.f90 \
  CTraX407.f90 \
  CTraX503.f90 \
  CTraX504.f90 \
  CTraX505.f90 \
  CTraX506.f90 \
  CTraX507.f90 \
  CTraX602.f90 \
  CTraX603.f90 \
  CTraX604.f90 \
  CTraX605.f90 \
  CTraX606.f90 \
  CTraX607.f90 \
  CTraX701.f90 \
  CTraX702.f90 \
  CTraX703.f90 \
  CTraX704.f90 \
  CTraX705.f90 \
  CTraX706.f90 \
  CTraX707.f90 \
  ERIGlobals.f90 \
  HGTraX106.f90 \
  HGTraX205.f90 \
  HGTraX206.f90 \
  HGTraX304.f90 \
  HGTraX305.f90 \
  HGTraX306.f90 \
  HGTraX403.f90 \
  HGTraX404.f90 \
  HGTraX405.f90 \
  HGTraX406.f90 \
  HGTraX502.f90 \
  HGTraX503.f90 \
  HGTraX504.f90 \
  HGTraX505.f90 \
  HGTraX506.f90 \
  HGTraX601.f90 \
  HGTraX602.f90 \
  HGTraX603.f90 \
  HGTraX604.f90 \
  HGTraX605.f90 \
  HGTraX606.f90 \
  HGTraX700.f90 \
  HGTraX701.f90 \
  HGTraX702.f90 \
  HGTraX703.f90 \
  HGTraX704.f90 \
  HGTraX705.f90 \
  HGTraX706.f90 \
  PoleGlobals.f90 \
  PoleNodeType.f90

EXTRA_INCLUDES = -I../../MondoMods

CPP = @CPP@
AM_CPPFLAGS = @AM_CPPFLAGS@

include ../../make.inc

# Dependencies.
AuxInt10.o : \
  ERIGlobals.o

AuxInt11.o : \
  ERIGlobals.o

AuxInt12.o : \
  ERIGlobals.o

AuxInt13.o : \
  ERIGlobals.o

AuxInt7.o : \
  ERIGlobals.o

AuxInt8.o : \
  ERIGlobals.o

AuxInt9.o : \
  ERIGlobals.o

CTraX107.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX206.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX207.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX305.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX306.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX307.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX404.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX405.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX406.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX407.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX503.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX504.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX505.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX506.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX507.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX602.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX603.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX604.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX605.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX606.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX607.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX701.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX702.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX703.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX704.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX705.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX706.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

CTraX707.o : \
  ERIGlobals.o \
	PoleNodeType.o \
	PoleGlobals.o

HGTraX106.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX205.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX206.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX304.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX305.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX306.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX403.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX404.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX405.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX406.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX502.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX503.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX504.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX505.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX506.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX601.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX602.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX603.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX604.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX605.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX606.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX700.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX701.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX702.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX703.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX704.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX705.o : \
  ERIGlobals.o \
	PoleNodeType.o

HGTraX706.o : \
  ERIGlobals.o \
	PoleNodeType.o
