include $(top_srcdir)/make.inc

noinst_LTLIBRARIES = libQCTC.la

libQCTC_la_SOURCES = \
  AuxInt10.f90 \
  AuxInt11.f90 \
  AuxInt12.f90 \
  AuxInt13.f90 \
  AuxInt7.f90 \
  AuxInt8.f90 \
  AuxInt9.f90 \
  CTraX107.f90 \
  CTraX206.f90 \
  CTraX207.f90 \
  CTraX305.f90 \
  CTraX306.f90 \
  CTraX307.f90 \
  CTraX404.f90 \
  CTraX405.f90 \
  CTraX406.f90 \
  CTraX407.f90 \
  CTraX503.f90 \
  CTraX504.f90 \
  CTraX505.f90 \
  CTraX506.f90 \
  CTraX507.f90 \
  CTraX602.f90 \
  CTraX603.f90 \
  CTraX604.f90 \
  CTraX605.f90 \
  CTraX606.f90 \
  CTraX607.f90 \
  CTraX701.f90 \
  CTraX702.f90 \
  CTraX703.f90 \
  CTraX704.f90 \
  CTraX705.f90 \
  CTraX706.f90 \
  CTraX707.f90 \
  ERIGlobals.f90 \
  HGTraX106.f90 \
  HGTraX205.f90 \
  HGTraX206.f90 \
  HGTraX304.f90 \
  HGTraX305.f90 \
  HGTraX306.f90 \
  HGTraX403.f90 \
  HGTraX404.f90 \
  HGTraX405.f90 \
  HGTraX406.f90 \
  HGTraX502.f90 \
  HGTraX503.f90 \
  HGTraX504.f90 \
  HGTraX505.f90 \
  HGTraX506.f90 \
  HGTraX601.f90 \
  HGTraX602.f90 \
  HGTraX603.f90 \
  HGTraX604.f90 \
  HGTraX605.f90 \
  HGTraX606.f90 \
  HGTraX700.f90 \
  HGTraX701.f90 \
  HGTraX702.f90 \
  HGTraX703.f90 \
  HGTraX704.f90 \
  HGTraX705.f90 \
  HGTraX706.f90 \
  PoleGlobals.f90 \
  PoleNodeType.f90

SOURCES_DEPCHECK = $(libQCTC_la_SOURCES)

EXTRA_INCLUDES = -I../../MondoMods

# Dependencies.
AuxInt10.lo : ERIGlobals.lo
AuxInt11.lo : ERIGlobals.lo
AuxInt12.lo : ERIGlobals.lo
AuxInt13.lo : ERIGlobals.lo
AuxInt7.lo  : ERIGlobals.lo
AuxInt8.lo  : ERIGlobals.lo
AuxInt9.lo  : ERIGlobals.lo

CTraX107.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX206.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX207.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX305.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX306.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX307.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX404.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX405.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX406.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX407.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX503.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX504.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX505.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX506.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX507.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX602.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX603.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX604.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX605.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX606.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX607.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX701.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX702.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX703.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX704.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX705.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX706.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo
CTraX707.lo : ERIGlobals.lo PoleNodeType.lo PoleGlobals.lo

HGTraX106.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX205.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX206.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX304.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX305.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX306.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX403.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX404.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX405.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX406.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX502.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX503.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX504.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX505.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX506.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX601.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX602.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX603.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX604.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX605.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX606.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX700.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX701.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX702.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX703.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX704.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX705.lo : ERIGlobals.lo PoleNodeType.lo
HGTraX706.lo : ERIGlobals.lo PoleNodeType.lo
