include $(top_srcdir)/make.inc

noinst_LTLIBRARIES = libGRD.la

libGRD_la_SOURCES = \
  BraHRR1010.F90 \
  BraHRR101.F90 \
  BraHRR103.F90 \
  BraHRR106.F90 \
  BraHRR110.F90 \
  BraHRR11.F90 \
  BraHRR13.F90 \
  BraHRR16.F90 \
  BraHRR310.F90 \
  BraHRR31.F90 \
  BraHRR33.F90 \
  BraHRR36.F90 \
  BraHRR610.F90 \
  BraHRR61.F90 \
  BraHRR63.F90 \
  BraHRR66.F90 \
  dIntB10010101.F90 \
  dIntB10010301.F90 \
  dIntB10010303.F90 \
  dIntB10010601.F90 \
  dIntB10010603.F90 \
  dIntB10010606.F90 \
  dIntB10011001.F90 \
  dIntB10030101.F90 \
  dIntB10030301.F90 \
  dIntB10030303.F90 \
  dIntB10030601.F90 \
  dIntB10030603.F90 \
  dIntB10030606.F90 \
  dIntB10031001.F90 \
  dIntB10031003.F90 \
  dIntB10060101.F90 \
  dIntB10060301.F90 \
  dIntB10060303.F90 \
  dIntB10060601.F90 \
  dIntB10060603.F90 \
  dIntB10060606.F90 \
  dIntB10061001.F90 \
  dIntB10061003.F90 \
  dIntB10061006.F90 \
  dIntB10100101.F90 \
  dIntB10100301.F90 \
  dIntB10100303.F90 \
  dIntB10100601.F90 \
  dIntB10100603.F90 \
  dIntB10100606.F90 \
  dIntB10101001.F90 \
  dIntB10101003.F90 \
  dIntB10101006.F90 \
  dIntB10101010.F90 \
  dIntB1010101.F90 \
  dIntB3010101.F90 \
  dIntB3010301.F90 \
  dIntB3030101.F90 \
  dIntB3030301.F90 \
  dIntB3030303.F90 \
  dIntB6010101.F90 \
  dIntB6010301.F90 \
  dIntB6010303.F90 \
  dIntB6010601.F90 \
  dIntB6030101.F90 \
  dIntB6030301.F90 \
  dIntB6030303.F90 \
  dIntB6030601.F90 \
  dIntB6030603.F90 \
  dIntB6060101.F90 \
  dIntB6060301.F90 \
  dIntB6060303.F90 \
  dIntB6060601.F90 \
  dIntB6060603.F90 \
  dIntB6060606.F90

EXTRA_DIST = \
  dERIInterfaceB.Inc

EXTRA_INCLUDES = -I$(builddir)/../MSC
