include $(top_srcdir)/make.inc

noinst_LTLIBRARIES = libHRR.la

libHRR_la_SOURCES = \
  KetHRR1010.F90 \
  KetHRR102.F90 \
  KetHRR103.F90 \
  KetHRR104.F90 \
  KetHRR106.F90 \
  KetHRR1510.F90 \
  KetHRR1515.F90 \
  KetHRR152.F90 \
  KetHRR153.F90 \
  KetHRR154.F90 \
  KetHRR156.F90 \
  KetHRR21.F90 \
  KetHRR22.F90 \
  KetHRR32.F90 \
  KetHRR33.F90 \
  KetHRR42.F90 \
  KetHRR43.F90 \
  KetHRR44.F90 \
  KetHRR62.F90 \
  KetHRR63.F90 \
  KetHRR64.F90 \
  KetHRR66.F90

EXTRA_INCLUDES = -I$(builddir)/../MSC
