include $(top_srcdir)/make.inc

noinst_LTLIBRARIES = libINT.la

libINT_la_SOURCES = \
  BraHRR1010.f90 \
  BraHRR101.f90 \
  BraHRR102.f90 \
  BraHRR103.f90 \
  BraHRR106.f90 \
  BraHRR110.f90 \
  BraHRR11.f90 \
  BraHRR12.f90 \
  BraHRR13.f90 \
  BraHRR16.f90 \
  BraHRR210.f90 \
  BraHRR21.f90 \
  BraHRR22.f90 \
  BraHRR23.f90 \
  BraHRR26.f90 \
  BraHRR310.f90 \
  BraHRR31.f90 \
  BraHRR32.f90 \
  BraHRR33.f90 \
  BraHRR36.f90 \
  BraHRR610.f90 \
  BraHRR61.f90 \
  BraHRR62.f90 \
  BraHRR63.f90 \
  BraHRR66.f90 \
  IntB10010101.f90 \
  IntB10010201.f90 \
  IntB10010202.f90 \
  IntB10010301.f90 \
  IntB10010302.f90 \
  IntB10010303.f90 \
  IntB10010601.f90 \
  IntB10010602.f90 \
  IntB10010603.f90 \
  IntB10010606.f90 \
  IntB10011001.f90 \
  IntB10020101.f90 \
  IntB10020201.f90 \
  IntB10020202.f90 \
  IntB10020301.f90 \
  IntB10020302.f90 \
  IntB10020303.f90 \
  IntB10020601.f90 \
  IntB10020602.f90 \
  IntB10020603.f90 \
  IntB10020606.f90 \
  IntB10021001.f90 \
  IntB10021002.f90 \
  IntB10030101.f90 \
  IntB10030201.f90 \
  IntB10030202.f90 \
  IntB10030301.f90 \
  IntB10030302.f90 \
  IntB10030303.f90 \
  IntB10030601.f90 \
  IntB10030602.f90 \
  IntB10030603.f90 \
  IntB10030606.f90 \
  IntB10031001.f90 \
  IntB10031002.f90 \
  IntB10031003.f90 \
  IntB10060101.f90 \
  IntB10060201.f90 \
  IntB10060202.f90 \
  IntB10060301.f90 \
  IntB10060302.f90 \
  IntB10060303.f90 \
  IntB10060601.f90 \
  IntB10060602.f90 \
  IntB10060603.f90 \
  IntB10060606.f90 \
  IntB10061001.f90 \
  IntB10061002.f90 \
  IntB10061003.f90 \
  IntB10061006.f90 \
  IntB10100101.f90 \
  IntB10100201.f90 \
  IntB10100202.f90 \
  IntB10100301.f90 \
  IntB10100302.f90 \
  IntB10100303.f90 \
  IntB10100601.f90 \
  IntB10100602.f90 \
  IntB10100603.f90 \
  IntB10100606.f90 \
  IntB10101001.f90 \
  IntB10101002.f90 \
  IntB10101003.f90 \
  IntB10101006.f90 \
  IntB10101010.f90 \
  IntB1010101.f90 \
  IntB2010101.f90 \
  IntB2010201.f90 \
  IntB2020101.f90 \
  IntB2020201.f90 \
  IntB2020202.f90 \
  IntB3010101.f90 \
  IntB3010201.f90 \
  IntB3010202.f90 \
  IntB3010301.f90 \
  IntB3020101.f90 \
  IntB3020201.f90 \
  IntB3020202.f90 \
  IntB3020301.f90 \
  IntB3020302.f90 \
  IntB3030101.f90 \
  IntB3030201.f90 \
  IntB3030202.f90 \
  IntB3030301.f90 \
  IntB3030302.f90 \
  IntB3030303.f90 \
  IntB6010101.f90 \
  IntB6010201.f90 \
  IntB6010202.f90 \
  IntB6010301.f90 \
  IntB6010302.f90 \
  IntB6010303.f90 \
  IntB6010601.f90 \
  IntB6020101.f90 \
  IntB6020201.f90 \
  IntB6020202.f90 \
  IntB6020301.f90 \
  IntB6020302.f90 \
  IntB6020303.f90 \
  IntB6020601.f90 \
  IntB6020602.f90 \
  IntB6030101.f90 \
  IntB6030201.f90 \
  IntB6030202.f90 \
  IntB6030301.f90 \
  IntB6030302.f90 \
  IntB6030303.f90 \
  IntB6030601.f90 \
  IntB6030602.f90 \
  IntB6030603.f90 \
  IntB6060101.f90 \
  IntB6060201.f90 \
  IntB6060202.f90 \
  IntB6060301.f90 \
  IntB6060302.f90 \
  IntB6060303.f90 \
  IntB6060601.f90 \
  IntB6060602.f90 \
  IntB6060603.f90 \
  IntB6060606.f90

EXTRA_DIST = \
  ERIInclude.Inc \
  ERIInterfaceB.Inc \
  ERIListInterfaceB.Inc

EXTRA_INCLUDES = -I$(builddir)/../MSC

# Some compilers have trouble optimizing some of the sources here. For now we
# will turn the optimization level down...
if USE_COMPILER_OPTIMIZATIONS
OPTIMIZATION_FLAGS = -O1
endif
